# audio-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
dataset/step1/: covert.py  fix.py  load.py  merge.py  upload.py
dataset/step2/: one_infer.py
stage1/: commands.sh
stage1/projector/: only_text.py  original.py  projector.py  train.sh
stage2/: README.md
stage3/: README.md
train/: infer.py  projector.py  train.sh
train/projector/: infer.py  projector.py  train.sh
train/slam-asr/: infer.sh  inference.py  slam_asr.py  test.py  train.sh
