[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "end2end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.1",
    "datasets>=3.3.2",
    "jsonargparse[signatures]>=4.37.0",
    "librosa>=0.11.0",
    "lightning>=2.5.0.post0",
    "mlx>=0.23.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "protobuf>=6.30.0",
    "pydantic>=2.10.6",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 130
target-version = "py312"
